﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-05-01
	Changed: Rules with no priority, affinity, or power plan are not considered valid. Responsibility is on the user.
### 2019-04-30
	Added: Parent finding. Enabled per-rule and in general in advanced options.
### 2019-04-28
	Added: Advanced configuration now temporarily hosts ignore and protected lists.
		No configuration is allowed in the UI for these as they're purely informative. These will be moved elsewhere in later update.
### 2019-04-27
	Added: Power menu in main window so power changes are available outside of the tray context menu.
### 2019-04-25
	Added: IPC component warns about insufficient permissions.
	Fixed: Using statement was hiding an exception because NamedPipe dispose was throwing a new one under some circumstances.
	Added: Third party license dialog.
	Changed: Several messageboxes are now centered on parent instead of screen.
### 2019-04-24
	Fixed: Watchlist changes outside of creating new rules was not being saved properly.
### 2019-04-23
	Internal: Small improvements.
### 2019-04-20
	Internal: Improve exit cleanup.
	Internal: Various async code changes.
	Changed: "Show only final state" is now "Final state only" in [Logging].
	Changed: "Show unmodified portions" is now "Unmodified portions" in [Logging].
### 2019-04-19
	Internal: Lots of quality of life changes to internal code, especially to configuration changes.
### 2019-04-17
	Changed: A lot of start-up output was removed or bundled up into fewer lines.
### 2019-04-16
	Added: Process start & exit logging. Configured per rule and disabled by default. (requested by Chairkicker Nick)
	Internal: More re-organizing. Should have no impact on users.
	Internal: UI building. Should have no impact on users.
	Internal: Better scoping of variables so they don't linger forever.