@@ -700,7 +700,7 @@ namespace Taskmaster.UI
 			var litem = new ListViewItem(new string[] {
 				(prc.ActualOrder+1).ToString(),
 				prc.FriendlyName,
-				prc.Executable,
+				prc.Executables?.Length > 0 ? string.Join(", ", prc.Executables) : string.Empty,
 				string.Empty,
 				aff,
 				string.Empty,
@@ -735,7 +735,7 @@ namespace Taskmaster.UI
 				WatchlistRules.BeginUpdate();
 
 				litem.SubItems[NameColumn].Text = prc.FriendlyName;
-				litem.SubItems[ExeColumn].Text = prc.Executable;
+				litem.SubItems[ExeColumn].Text = (prc.Executables?.Length > 0) ? string.Join(", ", prc.Executables) : string.Empty;
 				litem.SubItems[PrioColumn].Text = prc.Priority.HasValue ? MKAh.Readable.ProcessPriority(prc.Priority.Value) : string.Empty;
 				string aff = string.Empty;
 				if (prc.AffinityMask >= 0)
@@ -3264,7 +3264,7 @@ namespace Taskmaster.UI
 
 					var sbs = new StringBuilder().Append("[").Append(prc.FriendlyName).Append("]").AppendLine();
 
-					if (!string.IsNullOrEmpty(prc.Executable)) sbs.Append("Image = ").Append(prc.Executable).AppendLine();
+					if (prc.Executables?.Length > 0) sbs.Append("Executables = { ").Append(string.Join(", ", prc.Executables)).AppendLine(" }");
 					if (!string.IsNullOrEmpty(prc.Path)) sbs.Append("Path = ").Append(prc.Path).AppendLine();
 					if (!string.IsNullOrEmpty(prc.Description)) sbs.Append("Description = " + prc.Description);
 					if (prc.IgnoreList != null) sbs.Append("Ignore = { ").Append(string.Join(", ", prc.IgnoreList)).Append(" }").AppendLine();
